--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -2,9 +2,11 @@ name: Build
 on:
   push:
     branches:
-      - main
+      - dev
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - dev
+    # types: [opened, synchronize, reopened]
 jobs:
   sonarcloud:
     name: SonarCloud
